<resources>
    <string name="app_name">Finsights</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fins!ghts</string>
    <string name="nav_header_subtitle">user@kingsmen.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_transactions">Transactions</string>

    <!-- home fragment values   -->
    <string name="monthly_budget_heading">MONTHLY BUDGET</string>
    <string name="monthly_summary_heading">MONTHLY SUMMARY</string>
    <string name="net_account_balance_heading">ACCOUNT BALANCE</string>
    <string name="credit_score_heading">CREDIT SCORE</string>
    <string name="news_updates_heading">NEWS UPDATES</string>
    <string name="special_offers_heading">SPECIAL OFFERS</string>

    <string name="current_monthly_budget_percentage">9%</string>
    <string name="current_credit_score">753/900</string>
    <string name="safe_to_spend_rs_per_day">Safe to spend: Rs. 1000/day</string>
    <string name="dash">-</string>
    <string name="menu_accounts">Accounts</string>

    <string name="Read">Button</string>
    <string name="read">Read</string>
    <string name="onboard">Welcome</string>
    <string name="phoneHint">Phone No</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="ageHint">Age</string>
    <string name="signup">Sign Up</string>
    <string name="smsAck">Authorise to use SMS data for personalisation</string>
    <string name="country">Contry</string>
    <string name="gender">Gender</string>
    <string name="continue_ahead">Continue</string>
    <string name="personalize">Let\'s know you</string>
    <string name="menu_Microlessons">Micro Lessons</string>
</resources>