<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/age"
        android:layout_width="241dp"
        android:layout_height="51dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/continue_ahead"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="163dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/continue_ahead"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <CheckBox
        android:id="@+id/smsAck"
        android:layout_width="195dp"
        android:layout_height="78dp"
        android:text="@string/smsAck"
        android:textColor="#062CFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <EditText
        android:id="@+id/language"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:autofillHints="@string/country"
        android:hint="Language"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/country"
        android:layout_width="241dp"
        android:layout_height="49dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:hint="Country"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="264dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="65dp"
        android:text="@string/personalize"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />
</androidx.constraintlayout.widget.ConstraintLayout>